test/sema/illegal-subscript-index-type.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

extern int[5]* foo();

void main() {
    var p = foo();
    // CHECK: [[@LINE+1]]:15: error: illegal index type 'bool', expected 'int'
    var e = p[false];
}
